kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kollus-live-svc
  labels:
    app: kollus-live
spec:
  type: NodePort
  selector:
    app: kollus-live
  ports:
    - name: http
      port: 8443
      targetPort: 8443
